--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack -w"
+    "dev": "webpack -w",
+    "start": "webpack"
   },
   "author": "Gustavo Teixeira",
   "license": "MIT",
